--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,6 @@
 [alias]
 # Alias to build actual plugin binary for the specified target.
 build-wasip1 = "build --target wasm32-wasip1"
+
+[target.'cfg(target_arch = "wasm32")']
+rustflags = ["--cfg=swc_ast_unknown"]
